// 协议类型
syntax = "proto3";

option go_package = "./binary";

import "google/api/annotations.proto";

// 对外暴露的http协议的接口的服务 restful风格
service BinaryHttp {
  rpc UploadFile (stream BinaryHttpRequest) returns (BinaryHttpResponse) {
    option (google.api.http) = {
        post: "/binary/uploadfile"
        body: "*"
    };
  }
}

message BinaryHttpRequest {
  // 文件二进制数据
  bytes data = 1;
}

message BinaryHttpResponse {
  int32 code = 1;
  string message = 2;
}